--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@prismicio/next": "^2.0.0",
     "@prismicio/react": "^3.0.0",
     "axios": "^1.7.9",
+    "cookies-next": "^5.1.0",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
