--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
