--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.16.0",
     "@prismicio/next": "^2.0.0",
     "@prismicio/react": "^3.0.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "cookies-next": "^5.1.0",
     "next": "15.1.6",
